# try-rs-mono-release-plz

./: .pre-commit-config.yaml  Cargo.toml  README.md
crates/crate1/: Cargo.toml
crates/crate2/: Cargo.toml
